# quack-check

./: .gitignore  Cargo.toml  README.md  quack-check.example.toml
scripts/: docling_runner.py  pdf_probe.py  pdf_split.py  pdf_text.py
src/: chunk_plan.rs  cli.rs  config.rs  lib.rs  main.rs  pipeline.rs  policy.rs  postprocess.rs  probe.rs  report.rs  util.rs
src/engine/: mod.rs  python.rs  types.rs
tests/: chunk_plan.rs  config_parse.rs  policy_decision.rs  postprocess_merge.rs
