[package]
name = "quack-check"
version = "0.1.0"
edition = "2024"
license = "CC0-1.0"
description = "Deterministic PDF transcript orchestrator (Docling + chunking + policy)"
readme = "README.md"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.58", features = ["derive"] }
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
time = { version = "0.3.47", features = ["formatting"] }
toml = "1.0.1"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "json"] }
unicode-normalization = "0.1.25"
